fix description overflow for mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -632,6 +632,10 @@ div[data-youtube-video] iframe {
   animation: figure-breathe 6s ease-in-out infinite;
 }
 
+.yarl__root {
+  overflow: visible !important;
+}
+
 .yarl__container {
   /* --yarl__font-family: "Sono", system-ui, sans-serif; */
   --yarl__slide_captions_container_background: rgba(23, 25, 26, 0) !important;
@@ -646,14 +650,14 @@ div[data-youtube-video] iframe {
   align-items: center !important;
   margin-bottom: 32px !important;
   overflow: visible !important;
-}
-
-.yarl__root {
-  overflow: visible !important;
+  min-height: auto !important;
+  height: auto !important;
 }
 
 .yarl__slide_description {
   overflow: visible !important;
+  height: auto !important;
+  min-height: auto !important;
 }
 
 .yarl__slide_description_container {
